<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible">
    </ProgressBar>

    <RelativeLayout
        android:id="@+id/idRLHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/idIVBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@color/black_shade_1" />

        <TextView
            android:id="@+id/idTVCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp">
        </TextView>

        <LinearLayout
            android:id="@+id/idLLEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idTVCityName"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTILCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="4.5"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_city_name"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEditCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_background"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="15sp">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/idIVSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_search_24"
                app:tint="@color/white"
                android:contentDescription="@string/todo">
            </ImageView>
        </LinearLayout>

        <TextView
            android:id="@+id/idTVTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idLLEdit"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/_23"
            android:textColor="@color/white"
            android:textSize="70sp">
        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idIVIcon"
            android:layout_margin="10dp"
            android:layout_below="@+id/idTVTemperature"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVCondition"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/condition"
            android:textColor="@color/white"
            android:layout_below="@+id/idIVIcon">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"
            android:layout_above="@+id/info"/>

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/today_s_weather_forecast"
            android:textColor="@color/white"
            android:layout_above="@+id/idRVWeather"
            android:textStyle="bold">
        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idRVWeather"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>

</RelativeLayout>